[project]
name = "cyber-multiagent-adk"
version = "0.1.0"
description = "Multi-agent cybersecurity assistant built with Google ADK, served via ADK Web UI."
requires-python = ">=3.10"

dependencies = [
  "google-adk",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
